fix: stat wrapping

--- a/style.css
+++ b/style.css
@@ -638,7 +638,7 @@ span.damage-breakdown span {
 
 .stat-container {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
 
     width: 11rem;
 
